Generate JSON with context file location as URL